--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                     <div class="personagens">
                         
-                        <a href="#" name="homer">
+                        <a href="paginas/homer/homer.html" id="homer">
                             <img src="img/PaginaPrincipal/HomerFace.png" class="face" />
                             <p>Homer</p>
                         </a>
@@ -109,7 +109,7 @@
                     </div>
 
                     <div class="personagens">
-                        <a href="#" name="bart" >
+                        <a href="paginas/bart/bart.html" id="bart" >
                             <img src="img/PaginaPrincipal/BartFace.jpg" class="face" />
                             <p>Bart</p>
                         </a>
