Adicionar arquivos via upload

--- a/index.html
+++ b/index.html
@@ -116,21 +116,21 @@
                     </div>
 
                     <div class="personagens">
-                        <a href="#" name="maggie" >
+                        <a href="paginas/maggie/maggie.html" id="maggie" >
                             <img src="img/PaginaPrincipal/MaggieFace.png"  class="face" />
                             <p>Maggie</p>
                         </a>
                     </div>
 
                     <div class="personagens">
-                        <a href="#" name="marge" >
+                        <a href="paginas/marge/marge.html" id="marge" >
                             <img src="img/PaginaPrincipal/MargieFace.png" class="face" />
                             <p>Marge</p>
                         </a>
                     </div>
 
                     <div class="personagens">
-                        <a href="#" name="lisa" >
+                        <a href="paginas/lisa/lisa.html" id="lisa" >
                             <img  src="img/PaginaPrincipal/LisaFace.png" class="face" />
                             <p>Lisa</p>
                         </a>
