--- a/paginas/bart/bart.html
+++ b/paginas/bart/bart.html
@@ -36,6 +36,17 @@
                 Elementar de Springfield e sempre pertuba e incomoda o Diretor Skinner, fazendo que Bart Simpson
                  fique na detenção.
             </p>          <!-- Parágrafo 3 (Isso é um comentário, ou seja não intefere no código) -->
+        </section>
+
+        <section class="alinharAoCentro">
+     
+            <iframe id="video" width="560" height="315" 
+            src="https://www.youtube.com/embed/oCyXsHC-lQ4" title="YouTube video player" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+            gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
+          
+          </section>
 
     </body>
 </html>
