--- a/paginas/homer/homer.html
+++ b/paginas/homer/homer.html
@@ -41,7 +41,15 @@
             <div class="stopFloat"></div>
         </section>
 
-
+        <section class="alinharAoCentro">
+     
+            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/mhEQ_wDInk0" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
+        </section>
+        
+        </iframe>
 
     </body>
 
