Adicionar arquivos via upload

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
         <link rel="stylesheet" href="componentes/PaginaPrincipal/tv.css"> 
         <link rel="stylesheet" href="componentes/PaginaPrincipal/conteudoPagPrincipal.css">
         <title>Simpsons</title>
-        
+        <script
+            src="https://code.jquery.com/jquery-3.5.1.js"
+            integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+            crossorigin="anonymous">
+        </script>
+        <script src="jquery-csv.js" > </script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script type="text/javascript" src="index.js"></script>
     </head>
 
     <body> 
